IJPL-159611 Optimize editor painter iteration over document guarded blocks
GitOrigin-RevId: 86646cee285be53dd459db8dd9f582e1dca61f0f